--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.19.5",
     "css-loader": "^6.7.1",
+    "firebase": "^9.6.11",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -36,6 +37,8 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
+    "dotenv": "^16.0.0",
+    "process": "^0.11.10",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
