--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.19.5",
+    "axios": "^0.26.1",
     "css-loader": "^6.7.1",
     "firebase": "^9.6.11",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "webpack-dev-server": "^4.8.1"
