--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-loader": "^8.2.4",
     "dotenv": "^16.0.0",
     "process": "^0.11.10",
+    "source-map-loader": "^3.0.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
